fix dynamic import syntax and ajust webfont baseline

--- a/src/themes/default/style.less
+++ b/src/themes/default/style.less
@@ -8,6 +8,8 @@ a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,c
 
 em,i{ font-style:italic; }
 
+input{ background:none; }
+
 @mainColor: #3d3d3d;
 @subColor: #515151;
 @lightColor: #c6c6c6;
@@ -31,10 +33,6 @@ html{
 
 .btn:active{
     transform: translate3d(0, 2px, 0);
-}
-
-span{
-    margin-top:-4px;
 }
 
 body,
